SERVER-54631 Submit range deletion tasks upon sharded collection rename